# chordbook

./: .gitignore  HARMONIC_ANALYSIS_PLAN.md  README.md  SECURITY_IMPROVEMENTS.md  electron-main.cjs  electron-main.js  encapsulated-wiggling-perlis.md  icon-generator.html  index.html  main.cjs  package-lock.json  package.json  preload.cjs  tailwind.config.js  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
docs/: AUTO_SAVE_TROUBLESHOOTING.md  CONSOLIDATED_AUTO_SAVE.md  ICONS.md
public/: manifest.json
src/: App.tsx  AppSimple.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AddChordPanel.tsx  AutoSaveStatus.tsx  AutoScroll.tsx  BackupManager.tsx  BpmInput.tsx  CapoErrorBoundary.tsx  CapoSelector.tsx  ChordAnalysisOverlay.tsx  ChordDiagram.tsx  ChordForm.tsx  ChordIcons.tsx  ChordVoicingEditor.tsx  ComponentErrorBoundary.tsx  CustomChordModal.tsx  DebugStorage.tsx  DraggableChordCard.tsx  EditableText.tsx  ErrorBoundary.tsx  ErrorRecoveryPanel.tsx  ErrorTestComponent.tsx  FretMarker.tsx  Fretboard.tsx  FretboardDiagram.tsx  GPImportModal.tsx  HarmonicAnalysisPanel.tsx  HomePage.tsx  InstrumentSelector.tsx  IntegratedMetronome.tsx  LeadEditor.tsx  LeadFretboardDiagram.tsx  LeadNoteSequence.tsx  LeadSelector.tsx  Metronome.tsx  PDFExportDialog.tsx  PairedProgressionPanel.tsx  ProgressionList.tsx  SavedProgressions.tsx  SecureConfirmDialog.tsx  SecureInputDialog.tsx  SongManager.tsx  (+11 more)
src/lib/: audioPlayer.ts  backupService.ts  capoRateLimit.ts  chordUtils.ts  customChordLibrary.ts  db.ts  displayUtils.ts  fretUtils.ts  (+18 more)
(+6 files in other folders)
